// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components NotificationContextMenu render default language renders a title in English 1`] = `
.emotion-0 {
  background: #FFFFFF!important;
  border-radius: 8px!important;
  box-shadow: 2px 2px 3px rgba(230, 230, 230, 0.55);
  color: #3A424D!important;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif!important;
  font-size: 14px!important;
  text-transform: none!important;
  min-width: 10em;
}

.emotion-0 a {
  display: block;
  padding: 0.75em 1.25em!important;
}

.emotion-0 a:hover {
  -webkit-text-decoration: underline!important;
  text-decoration: underline!important;
}

<div>
  <div
    class="emotion-0"
  >
    <a
      data-testid="toggle-read"
    >
      Mark as read
    </a>
    <a
      data-testid="delete"
    >
      Delete
    </a>
  </div>
</div>
`;

exports[`components NotificationContextMenu render renders a menu with all items 1`] = `
.emotion-0 {
  background: #FFFFFF!important;
  border-radius: 8px!important;
  box-shadow: 2px 2px 3px rgba(230, 230, 230, 0.55);
  color: #3A424D!important;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif!important;
  font-size: 14px!important;
  text-transform: none!important;
  min-width: 10em;
}

.emotion-0 a {
  display: block;
  padding: 0.75em 1.25em!important;
}

.emotion-0 a:hover {
  -webkit-text-decoration: underline!important;
  text-decoration: underline!important;
}

<div>
  <div
    class="emotion-0"
  >
    <a
      data-testid="toggle-read"
    >
      Marcar como lido
    </a>
    <a
      data-testid="delete"
    >
      Apagar
    </a>
  </div>
</div>
`;
